# code-it-later-rs

./: .codeitlater  .gitignore  CHANGELOG  CHANGELOG.md  Cargo.toml  README.md
src/: args.rs  config.rs  datatypes.rs  fs_operation.rs  lib.rs  main.rs
tests/: test.go  test.rs  test_clean.rs  test_keywords.rs  test_langs.rs  test_multilines.rs  test_show_ignore.rs  tests.rs  tests_keywords.rs
tests/testcases/: clean_case_0.rs.bkp  clean_case_0.rs.delete_expect  clean_case_0.rs.expect  clean_case_0.rs.restore_expect  format_test.go.bkp  keywords.lisp  multilines.rs  test.go  test.json  test.py  test.rs
