[package]
name = "code-it-later-rs"
version = "0.6.5"
authors = ["ccQpein"]
edition = "2021"
description = "Filter crumbs you left in comments of code to remind where you were"
repository = "https://github.com/ccqpein/code-it-later-rs"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = ">1.0.185", features = ["derive"] }
lazy_static = "1"
rustyline = "9"
log = "0.4.0"
env_logger = "0.10.0"

[[bin]]
name = "codeitlater"
path = "src/main.rs"
